# yyasistant-client

./: .env  .env.example  app.py  requirements.txt
yy_assistant_server_client/: README.md  __init__.py  pyproject.toml
yy_assistant_server_client/api/agent/: api_agent_infer_yyh_agent_v0_engine_post.py  api_create_agent_conversation_yyh_agent_v0_engine_engine_post.py  api_get_agent_default_yyh_agent_v0_engine_default_get.py  api_get_agent_list_yyh_agent_v0_engine_get.py  api_get_agent_param_yyh_agent_v0_engine_engine_get.py
yy_assistant_server_client/api/asr/: api_asr_infer_file_yyh_asr_v0_engine_file_post.py  api_asr_infer_yyh_asr_v0_engine_post.py  api_get_asr_default_yyh_asr_v0_engine_default_get.py  api_get_asr_list_yyh_asr_v0_engine_get.py  api_get_asr_param_yyh_asr_v0_engine_engine_get.py
yy_assistant_server_client/api/llm/: api_agent_infer_yyh_llm_v0_engine_post.py  api_get_llm_list_yyh_llm_v0_engine_get.py  (+2 more)
yy_assistant_server_client/models/: __init__.py  agent_engine_input.py  agent_engine_input_config.py  asr_engine_input.py  asr_engine_input_config.py  asr_engine_output.py  audiotype.py  body_api_asr_infer_file_yyh_asr_v0_engine_file_post.py  conversation_id_resp.py  conversation_input.py  conversation_input_data.py  engine_default_resp.py  engine_desc.py  engine_desc_meta.py  engine_list_resp.py  engine_param.py  enginetype.py  gendertype.py  infertype.py  llm_engine_input.py  llm_engine_input_config.py  param_desc.py  paramtype.py  responsecode.py  tts_engine_input.py  tts_engine_input_config.py  tts_engine_output.py  voice_desc.py  voice_list_resp.py
(+17 files in other folders)
